@@ -91,9 +91,11 @@ class OrderExporter
             $weight = Converter::getKilograms((float)$order->getTotalWeight());
         }
 
+        $number = (string)(Packetery::ID_PREF_REF === ConfigHelper::get('PACKETERY_ID_PREFERENCE') ? $order->reference : $order->id);
         $senderLabel = (ConfigHelper::get('PACKETERY_ESHOP_ID', $packeteryOrder['id_shop_group'], $packeteryOrder['id_shop']) ?: '');
         $customer = $order->getCustomer();
         $data = [
+            'number' => $number,
             'currency' => $targetCurrency,
             'value' => $total,
             'codValue' => $codValue,
